2002-05-12  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-config.c (write_config_file): assign the root node to the
	document to avoid overwriting the config file with an empty one :-).

	* providers/postgres/gda-postgres-recordset.c (describe): fixed
	comparison between the column number and the number of fields.

2002-05-10  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-data-model-array.c (gda_data_model_array_append_row):
	set properties for field.
	(gda_data_model_array_describe_column): new function.

2002-05-10  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* providers/postgres/gda-postgres-recordset.c: store number of rows
	and columns and array of types for each column in the private
	structure. Changed the name of some internal functions to 
	gda_postgres_recordset_*.
	
	(gda_postgres_recordset_get_value_at): fetch all the rows previous to
	the requested if it has not already done.

	(gda_postgres_recordset_get_n_rows): removed. Not used any more since
	the base class already provides a valid one.
	
	* providers/postgres/gda-postgres.h:
	* providers/postgres/utils.c: removed dbsize and fname parameters from
	gda_postgres_set_value.

2002-05-10  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* providers/postgres/gda-postgres-provider.c: set the column titles
	for the recordsets.

	* providers/postgres/gda-postgres-recordset.[ch]: made it an object
	derived from GdaDataModelArray.

	* testing/models.c: GdaValue's from a data model are const.

2002-05-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/mysql/gda-mysql-recordset.[ch]: converted to a
	GdaDataModel-based class.

	* providers/mysql/gda-mysql-provider.c: adapted to changes in
	GdaMysqlRecordset.

	* libgda/gda-data-model.[ch] (gda_data_model_is_editing): new function

2002-05-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-data-model.[ch]: added "append_row" and "is_editable"
	virtual methods.
	(gda_data_model_class_init): initialize new members.